--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <input id="fullname" type="text" name="name" placeholder="Enter Name" required>
 
       <!-- Add a label for 'email'-->
-
+      <label for="email">Email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input id="email" type="text" name="email" placeholder="Enter email" required>
 
       <!-- Add a label for 'phone'-->
 
