--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <input type="checkbox" name="checkbox" value="checkbox">Checkbox<br>
 
-
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" value="Submit">
     </form>
 
   </body>
